papildus/style.css
.alert {

    padding: 10px;
    margin: 5px auto;

}


.input-group {

    margin: 0px auto;
    margin-bottom: 0px;
}

.jumbotron {

    padding: 10px;
}

.container {

}

.form-group {
    margin-top: 10px;
    margin-bottom: 10px;
}

.panel {
    margin-bottom: 10px;
    padding: 10px;
}

.thumbnail {
	padding: 10px;
}

.navbar-btn {
    margin-left: 5px;
}

.navbar {
    min-width: 420px;
      
}

#kontakti {
}

.navbar-right {
    margin-right: 0px;
}

//#raamis {
    border-style: solid;
    border-width: 2px;
    margin-left: 5px;
}

body {
    margin-bottom: 100px;
    background-image: url("http://www.hdwallpapers.in/walls/dock_sunset-wide.jpg");
}

.navbar-inverse, .navbar-default {
    background-color: #600000;
    border-color: #600000;
}

.fonakrasa {
    background-color:#eee;
    border-radius:6px;
    margin-left: 0px;
    margin-right:0px;
    padding: 10px;
}

img {
    margin:0px;
}

.thumbnail>img{display:block;max-width:100%;height:150px}

.input-group {
    margin-bottom: 10px;
}

.input-group-addon, .btn {
    min-width: 120px;
}

#bildiite1, #bildiite2, #bildiite3, #bildiite4, #bildiite5, #bildiite6 {
    margin-top: 0px;
    margin-left: 0px;
}

hr {
    height: 2px;
    background-color:#600000;
    color: #600000;
    margin-top: 20px;
    margin-bottom: 20px;
    width: 100%;
}

select {
    margin-bottom: 10px;
}


.col-xs-6 select {
    max-width: 100%;
}

#bildiite1, #bildiite2, #bildiite3, #bildiite4, #bildiite5, #bildiite6 {
    margin-top: 0px;
    margin-left: 0px;
    margin-bottom: 10px;
}

.pusrinda {
    max-width: 600px;
    margin:10px auto;
}


#googleMap {
    width: 600px;
    margin:10px auto;
}
.palabi {
    float: right!important;
}

.modal-footer {
    margin-top: 10px;
}

#pieslegshanas {
    margin-right: 10px;
}

.modal-open {
    padding-right: 0 !important;
    margin-right: 0 !important;
}

